@@ -1,4 +1,6 @@
 - library:
+  o drop 'callback_report_uninst' now that 'callback_uninst' enables to get
+    erasure progress
   o enable rpmdrake/gurpm/drakx to pass their own callbacks for erasure
     progress & errors
   o enhanced doc
